--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<section class="row  pt-4 about">
 			<div class="container">
 				<div class="row">
-					<h1 class="h1 col-12">How To Clone Our 7-Figure Per Year <br>
+					<h1 class="h1 col-12 addZindex1">How To Clone Our 7-Figure Per Year <br>
 						Business And <span>Start Making $1k Commissions <br>
 						On Autopilot</span> Even If You Have <br>
 					No Experience Online!</h1>
@@ -56,7 +56,7 @@
 					</div>
 					<div class=" addZindex1 col-12 col-md-6 mt-md-n5">
 						<div class="row">
-							<div class="calendar col-4 col-sm-2 ">
+							<div class="calendar col-4 col-xl-2 ">
 								<div class=" mb-1"><span class="month">APR</span></div>
 								<div ><span class="date py-1 px-2">24</span></div>
 							</div>
@@ -80,7 +80,7 @@
 							</div>
 						</div>
 					</div>
-					<img src="img/jps3-1.png" class="d-none d-md-block authorImg" alt="author">
+					<img src="img/jps3-1.png" class=" authorImg" alt="author">
 				</div>
 			</div>
 		</section>
